--- a/anams/ANAMS_IT3/nbproject/private/private.properties
+++ b/anams/ANAMS_IT3/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+user.properties.file=/Users/hugoqueiroz/Library/Application Support/NetBeans/8.2/build.properties
